# chi

./: .gitignore  Makefile  README.md  chi.opam
interpreter/lib/: chi.ml  dune  representation.ml
interpreter/test/: a.ml  dune
parser/lib/: Chi.cf  Makefile  dune
parser/test/: dune
test/: dune  run_tests.ml
test/test_programs/: addition.chi  multiplication.chi  nateq.chi  self-interpreter.chi  substitution.chi
test/test_programs/self_interpreter_tests/: case-1.chi  case-2.chi  case-3.chi  case-4.chi  case-5.chi  case-6.chi  case-7.chi  case-8.chi  case-9.chi  expected-1.chi  expected-2.chi  expected-4.chi  expected-5.chi  expected-9.chi  test.sh
