; name = name of the supermodule that will wrap all source files as submodules
; public_name = name of the library for ocamlfind and opam
(library
 (name chi_parser)
 (public_name chi.parser)
 (synopsis "This is a short description of the parser library."))

(env
  (dev
    (flags (:standard -warn-error -A))))
